--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.29.3",
+    "superagent": "^3.8.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
